src/test/resources/Parser/SyntaxErrors/NonOpenRemoteFunctionDeclaration.front
class A:
    static op<T>(t: T) {}

class B:
    static A.op(b: B) {}